# Volumetric-Path-Tracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  appveyor.yml  build_windows.cmd  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  build-problem.md  other.md
assets/: blackbody_texture.exr  blackbody_texture.ppm  blackbody_texture_2.exr  box.vdb  density_color_texture.exr  density_color_texture2.exr  dragon.vdb  dragon_with_xform.vdb  fill_vdb.hiplc  hdrvfx_nyany_1_n2_v101_Ref.hdr  wdas_cloud_half_filled.vdb.REMOVED.git-id  wdas_cloud_sixteenth.vdb  wdas_cloud_sixteenth_filled.vdb
gvdb/lib/: cudpp_1916cu10.1x64.lib  libgvdb.exp
gvdb/sample_utils/: FindOptix.cmake  main_win.cpp
instancer_hda/: CMakeLists.txt  README.md  ROP_VPT_Instance.cpp  ROP_VPT_Instance.h  file_IO.cpp  file_IO.h  volume_instance.h
instancer_hda/scenes/: defgeo.ins  defgeo.json  scene_1.hiplc
source/: CMakeLists.txt  CompileObj.cmake  Helpers.cmake  camera.h  gpu_vdb.h  hdr_loader.h  imgui_impl_glfw.cpp  kernel_params.h  light.h  main.cpp  plane.h  render_kernel.cu  render_kernel.h  temp.h  texture_kernels.cu  vdb_convert.cu
source/atmosphere/: atmosphere.cpp  atmosphere.h  atmosphere_kernels.cu  constants.h  definitions.glsl.inc  definitions.h  functions.glsl.inc  functions.h  model.cc  model.h
source/bvh/: AABB.h  BVH.cpp  BVH.h  CudaBVH.cpp  CudaBVH.h  CudaRenderKernel.h  Geometry.h  Scene.h  SplitBVHBuilder.cpp  SplitBVHBuilder.h  bvh.cpp  bvh.h  bvh_builder.cpp  bvh_builder.h  bvh_kernels.cu  linear_math.h  octree.cpp  octree.h  shadow_box.cpp  shadow_box.h  volume_aggregate.h
source/common/: fileIO.cpp  fileIO.h  helper_image.h  helper_math.h
source/geometry/: geometry.h  geometry_kernels.cu  sphere.h
source/gpu_vdb/: camera.h  gpu_vdb.cpp  gpu_vdb.h  matrix_math.h
source/imgui/: imgui_impl_opengl3.h
source/util/: fileIO.cpp  fileIO.h  logger.cpp  logger.h
